--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": [
+        "./src/**/*.d.ts",
         "./src/**/*.ts",
         "./src/**/*.tsx",
     ],
